<resources>
    <string name="app_name">MadMoveGame</string>

    <string name="title_activity_home">HomeActivity</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="intro_1">Welcome to MADMOVE GAMES</string>
    <string name="intro_2">We Predict, You Win</string>
    <string name="intro_3">Freely Available</string>
    <string name="intro_4">Keep up to date!</string>
    <string name="bottom_1">Best Prediction app available helping you free</string>
    <string name="bottom_2">Need Predictions,tip? You are at right place. We poat predictions regularly for Every Match</string>
    <string name="bottom_3">We provide All PRO Prediction/tips for FREE</string>
    <string name="bottom_4">Get Notified for injured, Unavailable players and never loss</string>

    <string name="skip">SKIP</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="no_account_create">Don\'t have an Account? </string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Rs">\u20B9</string>
    <string name="home">HOME</string>
    <string name="matches">MATCHES</string>
    <string name="feed">FEED</string>
    <string name="more">MORE</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="my_balance">MY BALANCE</string>
    <string name="my_reward_offer">MY REWARD &amp; OFFER</string>
    <string name="invite_ref">INVITE REFERRALS</string>
    <string name="my_setting">MY INFO &amp; SETTING</string>
    <string name="point_system">POINT SYSTEM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo_transition_name">logo</string>
    <string name="otp">VARIFY MOBILE NUMBER</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="contact">Mobile Number</string>
    <string name="Male">male</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trangender">Transgender</string>
    <string name="error_msg_10_digit_number">Please Enter Ten Digit Mobile Number</string>
    <string name="error_msg_six_digit_otp">Please Enter Six Digit OTP Number</string>
    <string name="please_wait">Please wait ...</string>
    <string name="error_msg_six_digit_password">Please Enter Six Digit Password</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="change">Change</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error_msg_enter_first_name">Enter First Name</string>
    <string name="error_msg_enter_last_name">Enter Last Name</string>
    <string name="error_msg_enter_email">Enter Email</string>
    <string name="error_msg_date_of_birth">Set Date of Birth</string>
    <string name="contact_mandatory">Mobile Number *</string>
    <string name="password_mandatory">Password *</string>
    <string name="first_name_mandatory">First Name *</string>
    <string name="email_mandatory">Email *</string>
    <string name="date_of_birth_mandatory">Date of Birth *</string>
    <string name="error_msg_enter_valid_email">Enter Valid Email</string>
    <string name="error_msg_enter_password">Enter Password</string>
    <string name="error_msg_enter_valid_first_name">Name atleast 3 letter</string>
    <string name="error_msg_valid_18_years">You must be at least 18 years old to Register</string>
    <string name="error_msg_enter_mobile_no">Enter Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_msg_enter_otp">Enter OTP</string>
    <string name="error_msg_password_not_matched">Password Not Matched</string>
    <string name="msg_sent_otp_1">OTP has been sent to</string>
    <string name="msg_sent_otp_2">It may take few minutes receiving OTP, depending on mobile network.</string>
    <string name="term_and_condition">Term &amp; Condition</string>
    <string name="term_and_condition_msg">By clicking &quot; Register &quot; , You agree with Our T&amp;C</string>
    <string name="send_otp">Send OTP</string>
    <string name="logout">LOGOUT</string>

</resources>
