<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/account"
        android:icon="@drawable/my_account_icon"
        android:title="@string/my_account" />

    <item
        android:id="@+id/balance"
        android:icon="@drawable/my_balance_icon"
        android:title="@string/my_balance" />

    <item
        android:id="@+id/reward"
        android:icon="@drawable/my_rewards_icon"
        android:title="@string/my_reward_offer" />

    <item
        android:id="@+id/invite"
        android:icon="@drawable/invite_friends_icon"
        android:title="@string/invite_ref"/>

    <item
        android:id="@+id/my_setting"
        android:icon="@drawable/settings_iocn"
        android:title="@string/my_setting"/>

    <item
        android:id="@+id/point"
        android:icon="@drawable/point_system_icon"
        android:title="@string/point_system"/>



</menu>