<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.register.RegisterFragment">

    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/login_page_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/msg_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/msg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_sent_otp_1" />

            <TextView
                android:id="@+id/mobileNo_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  7415240624"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/msg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/msg_layout"
            android:layout_marginBottom="@dimen/dim_20dp"
            android:gravity="center"
            android:text="@string/msg_sent_otp_2" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/otp_t_i_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/msg2"
            android:hint="@string/enter_otp"
            app:cardCornerRadius="@dimen/dim_10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/otp_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_t_i_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp_t_i_layout"
            android:layout_marginTop="@dimen/margin_bwt_edit_text"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="6" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/conform_password_t_i_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_t_i_layout"
            android:layout_marginTop="@dimen/margin_bwt_edit_text"
            android:hint="@string/confirm_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/conform_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="6" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conform_password_t_i_layout"
            android:layout_marginTop="@dimen/dim_50dp"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:id="@+id/change_layout"
                android:layout_width="@dimen/dim_100dp"
                android:layout_height="@dimen/dim_40dp"
                android:layout_marginLeft="@dimen/dim_5dp"
                android:layout_marginTop="@dimen/dim_5dp"
                android:layout_marginBottom="@dimen/dim_5dp"
                app:cardCornerRadius="@dimen/dim_10dp">

                <Button
                    android:id="@+id/change_bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/change"
                    android:textColor="@color/colorPrimary" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/dim_100dp"
                android:layout_height="@dimen/dim_40dp"
                android:layout_marginLeft="@dimen/dim_20dp"
                android:layout_marginTop="@dimen/dim_5dp"
                android:layout_marginBottom="@dimen/dim_5dp"
                app:cardCornerRadius="@dimen/dim_10dp">

                <Button
                    android:id="@+id/resend_otp_bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/resend_otp"
                    android:textColor="@color/colorPrimary" />

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/down_line_height"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>