<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_btw_logo_and_title"
            android:src="@drawable/mad_move_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/margin_btw_logo_and_title"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/login_page_title_text"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_0dp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/top_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:padding="@dimen/login_page_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_view">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_t_i_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_mandatory">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/contact_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_t_i_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_t_i_layout"
                android:layout_marginTop="@dimen/margin_bwt_edit_text"
                android:hint="@string/password_mandatory"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="6" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/forget_password_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_t_i_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/measure_10dp"
                android:text="@string/forget_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/measure_14sp"
                android:textStyle="bold" />


            <android.support.v7.widget.CardView
                android:layout_width="@dimen/dim_100dp"
                android:layout_height="@dimen/dim_40dp"
                android:layout_below="@+id/forget_password_bt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dim_30dp"
                android:layout_marginBottom="@dimen/dim_30dp"
                app:cardCornerRadius="@dimen/dim_10dp">

                <Button
                    android:id="@+id/login_bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary" />

            </android.support.v7.widget.CardView>


        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_20dp"
        android:gravity="end"
        android:text="Don\'t have an Account?  "
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/create_account_bt" />

    <TextView
        android:id="@+id/create_account_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_20dp"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintLeft_toRightOf="@+id/tv1"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/down_line_height"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>