<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.register.RegisterFragment">

    <RelativeLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/layout_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_btw_logo_and_title"
            android:src="@drawable/mad_move_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/margin_btw_logo_and_title"
            android:text="@string/otp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/login_page_title_text"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/login_page_padding"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/layout_1">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/contact_t_i_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_mandatory">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/contact_et"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="10"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.CardView
            android:layout_width="@dimen/dim_100dp"
            android:layout_height="@dimen/dim_40dp"
            android:layout_below="@+id/contact_t_i_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dim_50dp"
            app:cardCornerRadius="@dimen/dim_10dp">

            <Button
                android:id="@+id/verify_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/verify"
                android:textColor="@color/colorPrimary" />

        </android.support.v7.widget.CardView>


    </RelativeLayout>

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/down_line_height"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>